TicketController 進行中